--- a/src/components/BlogContent/BlogContent.css
+++ b/src/components/BlogContent/BlogContent.css
@@ -15,3 +15,10 @@
 .btn:hover {
   color: rgb(229, 178, 102);
 }
+
+.blogPage .loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  color: rgb(37, 39, 40);
+}
