--- a/src/components/HomePage/BlogContent/AddPostForm.module.css
+++ b/src/components/HomePage/BlogContent/AddPostForm.module.css
@@ -1,5 +1,5 @@
 
-.AddPostForm {
+.addPostForm {
   position: fixed;
   left: 50%;
   top: 40%;
@@ -33,11 +33,11 @@
   color: transparent;
 }
 
-.AddPostForm div + div {
+.addPostForm div + div {
   margin-top: 10px;
 }
 
-.AddPostForm h3 {
+.addPostForm h3 {
   margin: 0;
   margin-bottom: 10px;
 }
@@ -48,4 +48,16 @@
   position: absolute;
   top: 5px;
   right: 0;
+}
+.btn {
+  background-color: rgb(37, 39, 40);
+  color: rgb(195, 204, 211);
+  border-radius: 20px;
+  font-size: 15px;
+  width: 120px;
+  height: 30px;
+}
+
+.btn:hover {
+  color: rgb(229, 178, 102);
 }
