--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,16 +8,23 @@
   transition: .2s;
 }
 
-.headerBar  p {
-  font-weight: 500;
+.headerBar  a {
   transition: all .2s linear;
   display: inline-block;
   font-size: 18px;
   margin: 0 10px;
-  color: rgb(195, 204, 211);
   cursor: pointer;
+  text-decoration: none;
 }
 
-.headerBar  p:hover {
+.headerBar  a:hover {
   color:rgb(229, 178, 102);
+}
+.inactive {
+  color: rgb(195, 204, 211);
+  font-weight: 500;
+}
+.active {
+  color: rgb(229, 178, 102);
+  font-weight: 700;
 }
